Fixing spacing between resume entries. Get a life Patrick

--- a/public/stylesheets/resume_print.css
+++ b/public/stylesheets/resume_print.css
@@ -1,26 +1,38 @@
 .holder {
   width:700px;
 }
+.resume_entry {
+  margin-bottom:16px;
+}
 .resume_entry_title {
+  margin-top:0px;
   margin-left:13px;
+  margin-bottom:5px;
+}
+.resume_entry_bullets {
+  margin-top:0px;
 }
 .resume_entry_name {
   font-weight: bold;
 }
+.resume_section {
+  margin-bottom:16px;
+}
 .resume_section_heading { 
   margin-top:0px;
+  margin-bottom:16px;
 	font-size: 10.5pt;
 	font-weight: bold;
   text-transform:uppercase;
 }
-.resume_subsection_heading {
+.resume_footer_entry {
 	font-size: 10.5pt;
 	font-weight: bold;
   margin-left: 13px;
 }
-.resume_footer {
+.displaynone {
   display:none;
 }
-.displaynone {
+.resume_footer {
   display:none;
 }
